@@ -73,7 +73,7 @@ final class BugCheckerRules {
 
     @BeforeTemplate
     String before(String value) {
-      return String.format("\"%s\"", Convert.quote(value));
+      return "\"%s\"".formatted(Convert.quote(value));
     }
 
     @AfterTemplate
